fix cover overflow

--- a/assets/_scss/local/_cover.scss
+++ b/assets/_scss/local/_cover.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   // justify-content: center;
   // min-height: 88vh;
-  height: calc(100vh - 90px);
+  min-height: calc(100vh - 90px);
   padding: 1em;
   text-align: center;
   color: $NDAA-black;
